*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@49 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -31,3 +31,7 @@ PortfolioView.Minimum=Min.
 PortfolioView.Close=Close
 PortfolioView.Time=Time
 PortfolioView.Total=TOTAL
+NewsView.1=Date
+NewsView.2=Title
+NewsView.3=Source
+NewsView.4=Update News
