--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
@@ -31,3 +31,7 @@ PortfolioView.Minimum=Min.
 PortfolioView.Close=Chius.
 PortfolioView.Time=Orario
 PortfolioView.Total=TOTALE
+NewsView.1=Data
+NewsView.2=Titolo
+NewsView.3=Agenzia
+NewsView.4=Aggiornamento Notizie
