*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@87 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -1,5 +1,5 @@
 stockwatch.openChart=Grafico Storico
-stockwatch.openRealtimeChart=Grafico Realtime
+stockwatch.openRealtimeChart=Grafico Intraday
 stockwatch.openPriceBook=Book a 5 Livelli
 stockwatch.add=Aggiungi
 stockwatch.edit=Modifica
