--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -1,12 +1,38 @@
+stockwatch.title=Tabellone Titoli
 stockwatch.openChart=Grafico Storico
 stockwatch.openRealtimeChart=Grafico Intraday
 stockwatch.openPriceBook=Book a 5 Livelli
 stockwatch.add=Aggiungi
 stockwatch.edit=Modifica
 stockwatch.remove=Elimina
+stockwatch.colors=Colori
+chart.title1=Grafico Storico
+chart.title2=Intraday
 chart.line=Linea
 chart.candle=Candele
 chart.bar=Barre
 chart.add=Aggiungi
 chart.edit=Modifica
 chart.remove=Elimina
+news.title=Notizie
+news.browser=Browser Notizie
+book.title=Book
+actions.next=Successivo
+actions.previous=Precedente
+actions.update=Aggiorna
+actions.viewAll=Mostra Tutto
+actions.viewPeriod=Mostra Periodo
+actions.viewLast2Years=Mostra Ultimi 2 Anni
+actions.viewLastYear=Mostra Ultimo Anno
+actions.viewLast6Months=Mostra Ultimi 6 Mesi
+actions.backfill=Backfill
+actions.moveDown=Sposta in Basso
+actions.moveUp=Sposta in Alto
+actions.showStockwatch=Mostra Tabellone Titoli
+actions.showNews=Mostra Notizie
+AccumulationDistributionChart.label=Accumulazione/Distribuzione
+BollingerBandsChart.label=Bande di Bollinger
+AverageChart.label=Media Mobile
+RSIChart.label=R.S.I.
+StochasticChart.label=Oscillatore Stocastico
+TrendChart.label=Andamento
