--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -15,15 +15,15 @@ PortfolioView.Description=Description
 PortfolioView.Price=Price
 PortfolioView.Variance=Chg.%
 PortfolioView.Bid=Bid
-PortfolioView.BidQty=Qty
+PortfolioView.BidQty=Bid Q.ty
 PortfolioView.Ask=Ask
-PortfolioView.AskQty=Qty
+PortfolioView.AskQty=Ask Q.ty
 PortfolioView.Volume=Volume
-PortfolioView.MinQty=Min.Qty
+PortfolioView.MinQty=Min. Qty
 PortfolioView.Value=Value
-PortfolioView.OwnedQty=Q.ty
+PortfolioView.OwnedQty=Own. Q.ty
 PortfolioView.PaidPrice=Paid
-PortfolioView.OwnedValue=Value
+PortfolioView.OwnedValue=Own. Value
 PortfolioView.Gain=Gain
 PortfolioView.Open=Open
 PortfolioView.Maximum=Max.
@@ -35,3 +35,70 @@ NewsView.1=Date
 NewsView.2=Title
 NewsView.3=Source
 NewsView.4=Update News
+HistoryChartView.title=Historical Chart
+HistoryChartView.updateChart=Update Chart
+RealtimeChartView.title=Intraday
+AverageChart.label=Moving Average
+AverageChart.periods=Selected Periods
+AverageChart.type=Type
+AverageChart.simple=SIMPLE
+AverageChart.exponential=EXPONENTIAL
+AccumulationDistributionChart.label=Accumulation/Distribution
+BollingerBandsChart.label=Bollinger Bands
+BookPreferencePage.level1=Price Level 1 Color
+BookPreferencePage.level2=Price Level 2 Color
+BookPreferencePage.level3=Price Level 3 Color
+BookPreferencePage.level4=Price Level 4 Color
+BookPreferencePage.level5=Price Level 5 Color
+BollingerBandsChart.periods=Selected Periods
+BollingerBandsChart.deviations=Standard Deviations
+RSIChart.label=RSI
+RSIChart.periods=Selected Periods
+StochasticChart.label=Stochastic
+StochasticChart.periods=Selected Periods
+StochasticChart.averagePeriods=Moving Average Periods
+TrendChart.label=Trend
+TrendChart.periods=Selected Periods
+TrendChart.deviations=Standard deviations
+VolumeChart.label=Volume
+ChartParametersDialog.title=Parameters 
+ChartParametersDialog.description=Parameters definition
+ChartParametersDialog.name=Name
+ChartParametersDialog.color=Color
+ChartParametersDialog.insertIndicator=Insert indicator
+ChartParametersDialog.selectedZone=On the selected zone
+ChartParametersDialog.newZone=On a new zone
+ChartParametersDialog.message=Set parameters for 
+ColorsPreferencePage.textColor=Text Color
+ColorsPreferencePage.evenRowBackground=Even Row Background
+ColorsPreferencePage.oddRowBackground=Odd Row Background
+ColorsPreferencePage.positiveValueColor=Positive Value Color
+ColorsPreferencePage.negativeValueColor=Negative Value Color
+ColorsPreferencePage.totalBackground=Total Row Background
+GeneralPreferencePage.columns=Columns
+GeneralPreferencePage.availableColumns=Available columns
+GeneralPreferencePage.add=->
+GeneralPreferencePage.remove=<-
+GeneralPreferencePage.up=Up
+GeneralPreferencePage.down=Down
+GeneralPreferencePage.displayColumns=Display columns
+Book.time=Time:
+Book.volume=Vol:
+Book.last=Last:
+Book.high=High:
+Book.change=Chng:
+Book.low=Low:
+Book.bidNumber=\#
+Book.bidQuantity=Q.ty
+Book.bid=Bid
+Book.ask=Ask
+Book.askQuantity=Q.ty
+Book.askNumber=\#
+Book.title=\ - Level II
+BookPreferencePage.groupPrices=Group Prices
+BookPreferencePage.textColor=Text Color
+BookPreferencePage.rowBackground=Row Background
+BookPreferencePage.hilightPriceVariations=Hilight Price Variations
+BookPreferencePage.positiveValueColor=Positive Value Color
+BookPreferencePage.negativeValueColor=Negative Value Color
+BookPreferencePage.colorizePriceLevels=Colorize Price Levels
