--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
@@ -15,15 +15,15 @@ PortfolioView.Description=Descrizione
 PortfolioView.Price=Prezzo
 PortfolioView.Variance=Var.%
 PortfolioView.Bid=Denaro
-PortfolioView.BidQty=Q.t\u00E0
+PortfolioView.BidQty=Q.t\u00E0 Den.
 PortfolioView.Ask=Lettera
-PortfolioView.AskQty=Q.ta
+PortfolioView.AskQty=Q.ta Lett.
 PortfolioView.Volume=Volume
-PortfolioView.MinQty=Lotto
+PortfolioView.MinQty=Lotto Min.
 PortfolioView.Value=Valore
-PortfolioView.OwnedQty=Q.t\u00E0
+PortfolioView.OwnedQty=Q.t\u00E0 Poss.
 PortfolioView.PaidPrice=Pagato
-PortfolioView.OwnedValue=Valore
+PortfolioView.OwnedValue=Valore Poss.
 PortfolioView.Gain=Ricavo
 PortfolioView.Open=Ap.
 PortfolioView.Maximum=Max.
@@ -35,3 +35,65 @@ NewsView.1=Data
 NewsView.2=Titolo
 NewsView.3=Agenzia
 NewsView.4=Aggiornamento Notizie
+HistoryChartView.title=Grafico Storico
+HistoryChartView.updateChart=Aggiornamento Grafico
+RealtimeChartView.title=Intraday
+AverageChart.label=Media Mobile
+AverageChart.periods=Periodi Selezionati
+AverageChart.type=Tipo
+AverageChart.simple=SEMPLICE
+AverageChart.exponential=ESPONENZIALE
+AccumulationDistributionChart.label=Accumulazione/Distribuzione
+BollingerBandsChart.label=Bande di Bollinger
+BollingerBandsChart.periods=Periodi Selezionati
+BollingerBandsChart.deviations=Deviazioni Standard
+RSIChart.label=RSI
+RSIChart.periods=Periodi Selezionati
+StochasticChart.label=Stocastico
+StochasticChart.periods=Periodi Selezionati
+StochasticChart.averagePeriods=Periodi Media Mobile
+TrendChart.label=Andamento
+TrendChart.periods=Periodi Selezionati
+TrendChart.deviations=Deviazioni Standard
+VolumeChart.label=Volume
+ChartParametersDialog.title=Parametri 
+ChartParametersDialog.description=Definizione parametri
+ChartParametersDialog.name=Nome
+ChartParametersDialog.color=Colore
+ChartParametersDialog.insertIndicator=Inserisci indicatore
+ChartParametersDialog.selectedZone=Nella zona selezionata
+ChartParametersDialog.newZone=In una nuova zona
+ChartParametersDialog.message=Impostazione parametri per 
+ColorsPreferencePage.textColor=Colore Testo
+ColorsPreferencePage.evenRowBackground=Sfondo Righe Pari
+ColorsPreferencePage.oddRowBackground=Sfondo Righe Dispari
+ColorsPreferencePage.positiveValueColor=Colore per Valori Positivi
+ColorsPreferencePage.negativeValueColor=Colore per Valori Negativi
+ColorsPreferencePage.totalBackground=Sfondo Riga Totali
+GeneralPreferencePage.columns=Colonne
+GeneralPreferencePage.availableColumns=Colonne Disponibili
+GeneralPreferencePage.add=->
+GeneralPreferencePage.remove=<-
+GeneralPreferencePage.up=In Alto
+GeneralPreferencePage.down=In Basso
+GeneralPreferencePage.displayColumns=Colonne Visibili
+Book.time=Orario:
+Book.volume=Vol.:
+Book.last=Ultimo:
+Book.high=Massimo:
+Book.change=Var.%:
+Book.low=Minimo:
+Book.bidNumber=\#
+Book.bidQuantity=Q.t\u00E0
+Book.bid=Denaro
+Book.ask=Lettera
+Book.askQuantity=Q.t\u00E0
+Book.askNumber=\#
+Book.title=\ - Book
+BookPreferencePage.groupPrices=Raggruppa Prezzi
+BookPreferencePage.textColor=Colore Testo
+BookPreferencePage.rowBackground=Colore Sfondo
+BookPreferencePage.hilightPriceVariations=Evidenzia Variazioni di Prezzo
+BookPreferencePage.positiveValueColor=Colore Valori Positivi
+BookPreferencePage.negativeValueColor=Colore Valori Negativi
+BookPreferencePage.colorizePriceLevels=Evidenzia Livelli di Prezzo
