*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@152 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -17,6 +17,7 @@ chart.remove=Elimina
 news.title=Notizie
 news.browser=Browser Notizie
 book.title=Book
+indices.title=Indici
 actions.next=Successivo
 actions.previous=Precedente
 actions.update=Aggiorna
@@ -30,6 +31,7 @@ actions.moveDown=Sposta in Basso
 actions.moveUp=Sposta in Alto
 actions.showStockwatch=Mostra Tabellone Titoli
 actions.showNews=Mostra Notizie
+actions.showIndices=Mostra Indici
 AccumulationDistributionChart.label=Accumulazione/Distribuzione
 BollingerBandsChart.label=Bande di Bollinger
 AverageChart.label=Media Mobile
