*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@162 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -45,11 +45,6 @@ AverageChart.simple=SIMPLE
 AverageChart.exponential=EXPONENTIAL
 AccumulationDistributionChart.label=Accumulation/Distribution
 BollingerBandsChart.label=Bollinger Bands
-BookPreferencePage.level1=Price Level 1 Color
-BookPreferencePage.level2=Price Level 2 Color
-BookPreferencePage.level3=Price Level 3 Color
-BookPreferencePage.level4=Price Level 4 Color
-BookPreferencePage.level5=Price Level 5 Color
 BollingerBandsChart.periods=Selected Periods
 BollingerBandsChart.deviations=Standard Deviations
 RSIChart.label=RSI
@@ -102,3 +97,13 @@ BookPreferencePage.hilightPriceVariations=Hilight Price Variations
 BookPreferencePage.positiveValueColor=Positive Value Color
 BookPreferencePage.negativeValueColor=Negative Value Color
 BookPreferencePage.colorizePriceLevels=Colorize Price Levels
+BookPreferencePage.level1=Price Level 1 Color
+BookPreferencePage.level2=Price Level 2 Color
+BookPreferencePage.level3=Price Level 3 Color
+BookPreferencePage.level4=Price Level 4 Color
+BookPreferencePage.level5=Price Level 5 Color
+IndicesPreferencePage.textForeground=Text Color
+IndicesPreferencePage.background=Background
+IndicesPreferencePage.availableIndices=Available indices:
+IndicesPreferencePage.positiveValueColor=Positive Value Color
+IndicesPreferencePage.negativeValueColor=Negative Value Color
