--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
@@ -97,3 +97,13 @@ BookPreferencePage.hilightPriceVariations=Evidenzia Variazioni di Prezzo
 BookPreferencePage.positiveValueColor=Colore Valori Positivi
 BookPreferencePage.negativeValueColor=Colore Valori Negativi
 BookPreferencePage.colorizePriceLevels=Evidenzia Livelli di Prezzo
+BookPreferencePage.level1=Colore Prezzi Livello 1
+BookPreferencePage.level2=Colore Prezzi Livello 2
+BookPreferencePage.level3=Colore Prezzi Livello 3
+BookPreferencePage.level4=Colore Prezzi Livello 4
+BookPreferencePage.level5=Colore Prezzi Livello 5
+IndicesPreferencePage.textForeground=Colore Testo
+IndicesPreferencePage.background=Colore Sfondo
+IndicesPreferencePage.availableIndices=Indici disponibili:
+IndicesPreferencePage.positiveValueColor=Colore Valori Positivi
+IndicesPreferencePage.negativeValueColor=Colore Valori Negativi
