Changes for the alerts system
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@176 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -4,6 +4,8 @@ stockwatch.openRealtimeChart=Grafico Intraday
 stockwatch.openPriceBook=Book a 5 Livelli
 stockwatch.add=Aggiungi
 stockwatch.edit=Modifica
+stockwatch.editAlerts=Allarmi
+stockwatch.clearAlerts=Azzera Allarmi
 stockwatch.remove=Elimina
 stockwatch.colors=Colori
 chart.title1=Grafico Storico
