*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@181 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -1,12 +1,13 @@
+stockwatch.menu=&Tabellone
 stockwatch.title=Tabellone Titoli
-stockwatch.openChart=Grafico Storico
-stockwatch.openRealtimeChart=Grafico Intraday
-stockwatch.openPriceBook=Book a 5 Livelli
-stockwatch.add=Aggiungi
-stockwatch.edit=Modifica
-stockwatch.editAlerts=Allarmi
-stockwatch.clearAlerts=Azzera Allarmi
-stockwatch.remove=Elimina
+stockwatch.openChart=&Grafico Storico
+stockwatch.openRealtimeChart=Grafico &Intraday
+stockwatch.openPriceBook=&Book a 5 Livelli
+stockwatch.add=&Aggiungi
+stockwatch.edit=&Modifica
+stockwatch.remove=&Elimina
+stockwatch.editAlerts=A&llarmi
+stockwatch.clearAlerts=A&zzera Allarmi
 stockwatch.colors=Colori
 chart.title1=Grafico Storico
 chart.title2=Intraday
