Added new messages.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@206 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -12,6 +12,8 @@ PortfolioDialog.14=Please enter the data related to the stock item you want to w
 PortfolioView.Code=Code
 PortfolioView.Ticker=Ticker
 PortfolioView.Description=Description
+PortfolioView.ConfirmDeleteTitle=Confirm Delete
+PortfolioView.ConfirmDeleteMessage=Do you really want to delete the selected item ?
 PortfolioView.Price=Price
 PortfolioView.Variance=Chg.%
 PortfolioView.Bid=Bid
@@ -107,3 +109,12 @@ IndicesPreferencePage.background=Background
 IndicesPreferencePage.availableIndices=Available indices:
 IndicesPreferencePage.positiveValueColor=Positive Value Color
 IndicesPreferencePage.negativeValueColor=Negative Value Color
+ChartView.Date=Date:
+ChartView.Time=Time:
+ChartView.Value=Val.:
+ChartView.Max=Max.:
+ChartView.Min=Min.:
+ChartView.Change=Chg.:
+ChartView.Volume=Vol.:
+ChartView.ConfirmDeleteTitle=Confirm Delete
+ChartView.ConfirmDeleteMessage=Do you really want to delete the selected chart ?
