--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
@@ -12,6 +12,8 @@ PortfolioDialog.14=Scrivi i dati relativi al titolo da inserire nel tabellone.
 PortfolioView.Code=Codice
 PortfolioView.Ticker=Ticker
 PortfolioView.Description=Descrizione
+PortfolioView.ConfirmDeleteTitle=Conferma Cancellazione
+PortfolioView.ConfirmDeleteMessage=Vuoi veramente eliminare l'elemento selezionato ?
 PortfolioView.Price=Prezzo
 PortfolioView.Variance=Var.%
 PortfolioView.Bid=Denaro
@@ -107,3 +109,12 @@ IndicesPreferencePage.background=Colore Sfondo
 IndicesPreferencePage.availableIndices=Indici disponibili:
 IndicesPreferencePage.positiveValueColor=Colore Valori Positivi
 IndicesPreferencePage.negativeValueColor=Colore Valori Negativi
+ChartView.Date=Data:
+ChartView.Time=Ora:
+ChartView.Value=Val.:
+ChartView.Max=Max.:
+ChartView.Min=Min.:
+ChartView.Change=Var.:
+ChartView.Volume=Vol.:
+ChartView.ConfirmDeleteTitle=Conferma Cancellazione
+ChartView.ConfirmDeleteMessage=Vuoi veramente eliminare il grafico selezionato ?
