Added new messages.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@215 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/src/net/sourceforge/eclipsetrader/internal/messages.properties
+++ b/net.sourceforge.eclipsetrader/src/net/sourceforge/eclipsetrader/internal/messages.properties
@@ -21,3 +21,9 @@ TimingPreferencePage.afterHoursSession=AfterHours Session Time
 TimingPreferencePage.afterHoursSessionStart=Start
 TimingPreferencePage.afterHoursSessionEnd=End
 TimingPreferencePage.intradayChartPeriod=Intraday Chart Period
+StreamingControl.ChooseDataProvider=Data provider not configured.\nOpen Window -> Preferences to configure the data providers.
+TraderWorkbenchAdvisor.ConfirmExit=Confirm Exit
+TraderWorkbenchAdvisor.ExitMessage=Exit Eclipse Trader ?
+TraderWorkbenchAdvisor.ExitWithoutPrompt=Always exit without prompt
+TraderWorkbenchAdvisor.File=&File
+TraderWorkbenchAdvisor.Window=&Window
