--- a/net.sourceforge.eclipsetrader/src/net/sourceforge/eclipsetrader/internal/messages_it.properties
+++ b/net.sourceforge.eclipsetrader/src/net/sourceforge/eclipsetrader/internal/messages_it.properties
@@ -21,3 +21,9 @@ TimingPreferencePage.afterHoursSession=Sessione Serale (AfterHours)
 TimingPreferencePage.afterHoursSessionStart=Inizio
 TimingPreferencePage.afterHoursSessionEnd=Fine
 TimingPreferencePage.intradayChartPeriod=Periodo Grafici Intraday
+StreamingControl.ChooseDataProvider=Fornitore dati non configurato.\nAprire Window -> Preferences per configurare i fornitori dati.
+TraderWorkbenchAdvisor.ConfirmExit=Conferma chiusura
+TraderWorkbenchAdvisor.ExitMessage=Chiudere Eclipse Trader ?
+TraderWorkbenchAdvisor.ExitWithoutPrompt=Chiudi sempre senza conferma
+TraderWorkbenchAdvisor.File=&File
+TraderWorkbenchAdvisor.Window=&Window
