Added new messages.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@219 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -109,6 +109,7 @@ IndicesPreferencePage.background=Background
 IndicesPreferencePage.availableIndices=Available indices:
 IndicesPreferencePage.positiveValueColor=Positive Value Color
 IndicesPreferencePage.negativeValueColor=Negative Value Color
+IndicesPreferencePage.makeBoxEqual=Make boxes equally sized
 ChartView.Date=Date:
 ChartView.Time=Time:
 ChartView.Value=Val.:
