--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
@@ -109,6 +109,7 @@ IndicesPreferencePage.background=Colore Sfondo
 IndicesPreferencePage.availableIndices=Indici disponibili:
 IndicesPreferencePage.positiveValueColor=Colore Valori Positivi
 IndicesPreferencePage.negativeValueColor=Colore Valori Negativi
+IndicesPreferencePage.makeBoxEqual=Rendi i box della stessa dimensione
 ChartView.Date=Data:
 ChartView.Time=Ora:
 ChartView.Value=Val.:
