*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@224 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -11,30 +11,31 @@ stockwatch.clearAlerts=A&zzera Allarmi
 stockwatch.colors=Colori
 chart.title1=Grafico Storico
 chart.title2=Intraday
-chart.line=Linea
-chart.candle=Candele
-chart.bar=Barre
-chart.add=Aggiungi
-chart.edit=Modifica
-chart.remove=Elimina
+chart.line=&Linea
+chart.candle=&Candele
+chart.bar=&Barre
+chart.add=&Aggiungi
+chart.edit=&Modifica
+chart.remove=&Elimina
 news.title=Notizie
 news.browser=Browser Notizie
 book.title=Book
 indices.title=Indici
-actions.next=Successivo
-actions.previous=Precedente
-actions.update=Aggiorna
-actions.viewAll=Mostra Tutto
+actions.next=&Successivo
+actions.previous=&Precedente
+actions.update=A&ggiorna
+actions.viewAll=Mostra &Tutto
 actions.viewPeriod=Mostra Periodo
-actions.viewLast2Years=Mostra Ultimi 2 Anni
-actions.viewLastYear=Mostra Ultimo Anno
-actions.viewLast6Months=Mostra Ultimi 6 Mesi
+actions.viewLast2Years=Mostra Ultimi &2 Anni
+actions.viewLastYear=Mostra &Ultimo Anno
+actions.viewLast6Months=Mostra Ultimi &6 Mesi
 actions.backfill=Backfill
 actions.moveDown=Sposta in Basso
 actions.moveUp=Sposta in Alto
 actions.showStockwatch=Mostra Tabellone Titoli
 actions.showNews=Mostra Notizie
 actions.showIndices=Mostra Indici
+actions.delete=Elimina
 AccumulationDistributionChart.label=Accumulazione/Distribuzione
 BollingerBandsChart.label=Bande di Bollinger
 AverageChart.label=Media Mobile
