Added new messages
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@246 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
@@ -1,121 +1,156 @@
-PortfolioDialog.4=Tabellone Prezzi
-PortfolioDialog.5=Dati Fondamentali
-PortfolioDialog.Symbol=Codice
-PortfolioDialog.Ticker=Ticker
-PortfolioDialog.8=Descrizione
-PortfolioDialog.9=Lotto Minimo
-PortfolioDialog.10=Dati Portafoglio
-PortfolioDialog.11=Quantit\u00E0 Posseduta
-PortfolioDialog.12=Prezzo Pagato
-PortfolioDialog.13=Elemento del Tabellone
-PortfolioDialog.14=Scrivi i dati relativi al titolo da inserire nel tabellone.
-PortfolioView.Code=Codice
-PortfolioView.Ticker=Ticker
-PortfolioView.Description=Descrizione
-PortfolioView.ConfirmDeleteTitle=Conferma Cancellazione
-PortfolioView.ConfirmDeleteMessage=Vuoi veramente eliminare l'elemento selezionato ?
-PortfolioView.Price=Prezzo
-PortfolioView.Variance=Var.%
-PortfolioView.Bid=Denaro
-PortfolioView.BidQty=Q.t\u00E0 Den.
-PortfolioView.Ask=Lettera
-PortfolioView.AskQty=Q.ta Lett.
-PortfolioView.Volume=Volume
-PortfolioView.MinQty=Lotto Min.
-PortfolioView.Value=Valore
-PortfolioView.OwnedQty=Q.t\u00E0 Poss.
-PortfolioView.PaidPrice=Pagato
-PortfolioView.OwnedValue=Valore Poss.
-PortfolioView.Gain=Ricavo
-PortfolioView.Open=Ap.
-PortfolioView.Maximum=Max.
-PortfolioView.Minimum=Min.
-PortfolioView.Close=Chius.
-PortfolioView.Time=Orario
-PortfolioView.Total=TOTALE
-NewsView.1=Data
-NewsView.2=Titolo
-NewsView.3=Agenzia
-NewsView.4=Aggiornamento Notizie
-HistoryChartView.title=Grafico Storico
-HistoryChartView.updateChart=Aggiornamento Grafico
-RealtimeChartView.title=Intraday
+AccumulationDistributionChart.label=Accumulazione / Distribuzione
+AccumulationDistributionChart.standard=STANDARD
+AccumulationDistributionChart.type=Metodo da utilizzare
+AccumulationDistributionChart.williams=WILLIAM'S
+AverageChart.exponential=ESPONENZIALE
 AverageChart.label=Media Mobile
 AverageChart.periods=Periodi Selezionati
-AverageChart.type=Tipo
 AverageChart.simple=SEMPLICE
-AverageChart.exponential=ESPONENZIALE
-AccumulationDistributionChart.label=Accumulazione/Distribuzione
+AverageChart.type=Tipo
+AverageChart.weighted=PESATA
+AverageChart.william=DI WILLIAM
+AverageTrueRange.label=Average True Range
+BollingerBandsChart.deviations=Deviazioni Standard
 BollingerBandsChart.label=Bande di Bollinger
 BollingerBandsChart.periods=Periodi Selezionati
-BollingerBandsChart.deviations=Deviazioni Standard
-RSIChart.label=RSI
-RSIChart.periods=Periodi Selezionati
-StochasticChart.label=Stocastico
-StochasticChart.periods=Periodi Selezionati
-StochasticChart.averagePeriods=Periodi Media Mobile
-TrendChart.label=Andamento
-TrendChart.periods=Periodi Selezionati
-TrendChart.deviations=Deviazioni Standard
-VolumeChart.label=Volume
-ChartParametersDialog.title=Parametri 
-ChartParametersDialog.description=Definizione parametri
-ChartParametersDialog.name=Nome
-ChartParametersDialog.color=Colore
-ChartParametersDialog.insertIndicator=Inserisci indicatore
-ChartParametersDialog.selectedZone=Nella zona selezionata
-ChartParametersDialog.newZone=In una nuova zona
-ChartParametersDialog.message=Impostazione parametri per 
-ColorsPreferencePage.textColor=Colore Testo
-ColorsPreferencePage.evenRowBackground=Sfondo Righe Pari
-ColorsPreferencePage.oddRowBackground=Sfondo Righe Dispari
-ColorsPreferencePage.positiveValueColor=Colore per Valori Positivi
-ColorsPreferencePage.negativeValueColor=Colore per Valori Negativi
-ColorsPreferencePage.totalBackground=Sfondo Riga Totali
-GeneralPreferencePage.columns=Colonne
-GeneralPreferencePage.availableColumns=Colonne Disponibili
-GeneralPreferencePage.add=->
-GeneralPreferencePage.remove=<-
-GeneralPreferencePage.up=In Alto
-GeneralPreferencePage.down=In Basso
-GeneralPreferencePage.displayColumns=Colonne Visibili
-Book.time=Orario:
-Book.volume=Vol.:
-Book.last=Ultimo:
-Book.high=Massimo:
-Book.change=Var.%:
-Book.low=Minimo:
+BollingerBandsChart.smoothingType=Tipo di Media Mobile
+Book.ask=Lettera
+Book.askNumber=\#
+Book.askQuantity=Q.t\u00E0
+Book.bid=Denaro
 Book.bidNumber=\#
 Book.bidQuantity=Q.t\u00E0
-Book.bid=Denaro
-Book.ask=Lettera
-Book.askQuantity=Q.t\u00E0
-Book.askNumber=\#
+Book.change=Var.%:
+Book.high=Massimo:
+Book.last=Ultimo:
+Book.low=Minimo:
+Book.time=Orario:
 Book.title=\ - Book
-BookPreferencePage.groupPrices=Raggruppa Prezzi
-BookPreferencePage.textColor=Colore Testo
-BookPreferencePage.rowBackground=Colore Sfondo
-BookPreferencePage.hilightPriceVariations=Evidenzia Variazioni di Prezzo
-BookPreferencePage.positiveValueColor=Colore Valori Positivi
-BookPreferencePage.negativeValueColor=Colore Valori Negativi
+Book.volume=Vol.:
 BookPreferencePage.colorizePriceLevels=Evidenzia Livelli di Prezzo
+BookPreferencePage.groupPrices=Raggruppa Prezzi
+BookPreferencePage.hilightPriceVariations=Evidenzia Variazioni di Prezzo
 BookPreferencePage.level1=Colore Prezzi Livello 1
 BookPreferencePage.level2=Colore Prezzi Livello 2
 BookPreferencePage.level3=Colore Prezzi Livello 3
 BookPreferencePage.level4=Colore Prezzi Livello 4
 BookPreferencePage.level5=Colore Prezzi Livello 5
-IndicesPreferencePage.textForeground=Colore Testo
-IndicesPreferencePage.background=Colore Sfondo
-IndicesPreferencePage.availableIndices=Indici disponibili:
-IndicesPreferencePage.positiveValueColor=Colore Valori Positivi
-IndicesPreferencePage.negativeValueColor=Colore Valori Negativi
-IndicesPreferencePage.makeBoxEqual=Rendi i box della stessa dimensione
+BookPreferencePage.negativeValueColor=Colore Valori Negativi
+BookPreferencePage.positiveValueColor=Colore Valori Positivi
+BookPreferencePage.rowBackground=Colore Sfondo
+BookPreferencePage.textColor=Colore Testo
+ChartParametersDialog.aboveSelectedZone=Sopra la zona selezionata
+ChartParametersDialog.belowSelectedZone=Sotto la zona selezionata
+ChartParametersDialog.color=Colore
+ChartParametersDialog.description=Definizione parametri
+ChartParametersDialog.insertIndicator=Inserisci indicatore
+ChartParametersDialog.message=Impostazione parametri per
+ChartParametersDialog.name=Nome
+ChartParametersDialog.selectedZone=Nella zona selezionata
+ChartParametersDialog.title=Parametri
+ChartView.Change=Var.:
+ChartView.ConfirmDeleteMessage=Vuoi veramente eliminare il grafico selezionato ?
+ChartView.ConfirmDeleteTitle=Conferma Cancellazione
 ChartView.Date=Data:
-ChartView.Time=Ora:
-ChartView.Value=Val.:
 ChartView.Max=Max.:
 ChartView.Min=Min.:
-ChartView.Change=Var.:
+ChartView.Time=Ora:
+ChartView.Value=Val.:
 ChartView.Volume=Vol.:
-ChartView.ConfirmDeleteTitle=Conferma Cancellazione
-ChartView.ConfirmDeleteMessage=Vuoi veramente eliminare il grafico selezionato ?
+ColorsPreferencePage.evenRowBackground=Sfondo Righe Pari
+ColorsPreferencePage.negativeValueColor=Colore per Valori Negativi
+ColorsPreferencePage.oddRowBackground=Sfondo Righe Dispari
+ColorsPreferencePage.positiveValueColor=Colore per Valori Positivi
+ColorsPreferencePage.textColor=Colore Testo
+ColorsPreferencePage.totalBackground=Sfondo Riga Totali
+CommodityChannelIndex.label=Commodity Channel Index
+CommodityChannelIndex.period=Periodo
+CommodityChannelIndex.smoothingPeriod=Periodo Media
+CommodityChannelIndex.smoothingType=Tipo di Media Mobile
+DetrendedPriceOscillator.label=Detrended Price Oscillator
+DetrendedPriceOscillator.period=Periodo
+DetrendedPriceOscillator.smoothingPeriod=Tipo di Media Mobile
+DirectionalMovementIndex.label=Directional Movement Index
+DirectionalMovementIndex.negativeColor=Colore linea negativa
+DirectionalMovementIndex.period=Periodo
+DirectionalMovementIndex.positiveColor=Colore linea positiva
+DirectionalMovementIndex.smoothingPeriod=Periodo Media
+DirectionalMovementIndex.smoothingType=Tipo di Media Mobile
+GeneralPreferencePage.add=->
+GeneralPreferencePage.availableColumns=Colonne Disponibili
+GeneralPreferencePage.columns=Colonne
+GeneralPreferencePage.displayColumns=Colonne Visibili
+GeneralPreferencePage.down=In Basso
+GeneralPreferencePage.remove=<-
+GeneralPreferencePage.up=In Alto
+HistoryChartView.title=Grafico Storico
+HistoryChartView.updateChart=Aggiornamento Grafico
+IndicesPreferencePage.availableIndices=Indici disponibili:
+IndicesPreferencePage.background=Colore Sfondo
+IndicesPreferencePage.makeBoxEqual=Rendi i box della stessa dimensione
+IndicesPreferencePage.negativeValueColor=Colore Valori Negativi
+IndicesPreferencePage.positiveValueColor=Colore Valori Positivi
+IndicesPreferencePage.textForeground=Colore Testo
+NewIndicatorWizard.title=Aggiunta Indicatore
+NewsView.1=Data
+NewsView.2=Titolo
+NewsView.3=Agenzia
+NewsView.4=Aggiornamento Notizie
+OscillatorPage.description=Aggiunta di un nuovo indicatore
+OscillatorPage.title=Selezionare un Indicatore
+ParametersPage.description=Impostazione parametri
+ParametersPage.title=Parametri Indicatore
+PortfolioDialog.10=Dati Portafoglio
+PortfolioDialog.11=Quantit\u00E0 Posseduta
+PortfolioDialog.12=Prezzo Pagato
+PortfolioDialog.13=Elemento del Tabellone
+PortfolioDialog.14=Scrivi i dati relativi al titolo da inserire nel tabellone.
+PortfolioDialog.4=Tabellone Prezzi
+PortfolioDialog.5=Dati Fondamentali
+PortfolioDialog.8=Descrizione
+PortfolioDialog.9=Lotto Minimo
+PortfolioDialog.Symbol=Codice
+PortfolioDialog.Ticker=Ticker
+PortfolioView.Ask=Lettera
+PortfolioView.AskQty=Q.ta Lett.
+PortfolioView.Bid=Denaro
+PortfolioView.BidQty=Q.t\u00E0 Den.
+PortfolioView.Close=Chius.
+PortfolioView.Code=Codice
+PortfolioView.ConfirmDeleteMessage=Vuoi veramente eliminare l'elemento selezionato ?
+PortfolioView.ConfirmDeleteTitle=Conferma Cancellazione
+PortfolioView.Description=Descrizione
+PortfolioView.Gain=Ricavo
+PortfolioView.Maximum=Max.
+PortfolioView.MinQty=Lotto Min.
+PortfolioView.Minimum=Min.
+PortfolioView.Open=Ap.
+PortfolioView.OwnedQty=Q.t\u00E0 Poss.
+PortfolioView.OwnedValue=Valore Poss.
+PortfolioView.PaidPrice=Pagato
+PortfolioView.Price=Prezzo
+PortfolioView.Ticker=Ticker
+PortfolioView.Time=Orario
+PortfolioView.Total=TOTALE
+PortfolioView.Value=Valore
+PortfolioView.Variance=Var.%
+PortfolioView.Volume=Volume
+RSIChart.label=RSI
+RSIChart.periods=Periodi Selezionati
+RSIChart.smoothingPeriod=Periodo Media
+RSIChart.smoothingType=Tipo di Media Mobile
+RealtimeChartView.title=Intraday
+StochasticChart.averagePeriods=Periodi Media Mobile
+StochasticChart.buySignal=Soglia linea di Acquisto
+StochasticChart.dSmoothingPeriod=Periodo Media %D
+StochasticChart.kSmoothingPeriod=Periodo Media %K
+StochasticChart.label=Stocastico
+StochasticChart.periods=Periodi Selezionati
+StochasticChart.sellSignal=Soglia linea di Vendita
+StochasticChart.smoothingType=Tipo di Media Mobile
+TrendChart.deviations=Deviazioni Standard
+TrendChart.label=Andamento
+TrendChart.periods=Periodi Selezionati
+VolumeChart.label=Volume
+ZonePage.description=Selezionare la zona in cui inserire l'indicatore
+ZonePage.title=Zona Indicatore
