--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -1,121 +1,156 @@
-PortfolioDialog.4=Stock Watch
-PortfolioDialog.5=Fundamental Data
-PortfolioDialog.Symbol=Symbol
-PortfolioDialog.Ticker=Ticker
-PortfolioDialog.8=Description
-PortfolioDialog.9=Minimum Quantity
-PortfolioDialog.10=Portfolio Data
-PortfolioDialog.11=Owned Quantity
-PortfolioDialog.12=Paid Price
-PortfolioDialog.13=Stock Watch Item
-PortfolioDialog.14=Please enter the data related to the stock item you want to watch
-PortfolioView.Code=Code
-PortfolioView.Ticker=Ticker
-PortfolioView.Description=Description
-PortfolioView.ConfirmDeleteTitle=Confirm Delete
-PortfolioView.ConfirmDeleteMessage=Do you really want to delete the selected item ?
-PortfolioView.Price=Price
-PortfolioView.Variance=Chg.%
-PortfolioView.Bid=Bid
-PortfolioView.BidQty=Bid Q.ty
-PortfolioView.Ask=Ask
-PortfolioView.AskQty=Ask Q.ty
-PortfolioView.Volume=Volume
-PortfolioView.MinQty=Min. Qty
-PortfolioView.Value=Value
-PortfolioView.OwnedQty=Own. Q.ty
-PortfolioView.PaidPrice=Paid
-PortfolioView.OwnedValue=Own. Value
-PortfolioView.Gain=Gain
-PortfolioView.Open=Open
-PortfolioView.Maximum=Max.
-PortfolioView.Minimum=Min.
-PortfolioView.Close=Close
-PortfolioView.Time=Time
-PortfolioView.Total=TOTAL
-NewsView.1=Date
-NewsView.2=Title
-NewsView.3=Source
-NewsView.4=Update News
-HistoryChartView.title=Historical Chart
-HistoryChartView.updateChart=Update Chart
-RealtimeChartView.title=Intraday
+AccumulationDistributionChart.label=Accumulation / Distribution
+AccumulationDistributionChart.standard=STANDARD
+AccumulationDistributionChart.type=Method to use
+AccumulationDistributionChart.williams=WILLIAM'S
+AverageChart.exponential=EXPONENTIAL
 AverageChart.label=Moving Average
 AverageChart.periods=Selected Periods
-AverageChart.type=Type
 AverageChart.simple=SIMPLE
-AverageChart.exponential=EXPONENTIAL
-AccumulationDistributionChart.label=Accumulation/Distribution
+AverageChart.type=Type
+AverageChart.weighted=WEIGHTED
+AverageChart.william=WILLIAM'S
+AverageTrueRange.label=Average True Range
+BollingerBandsChart.deviations=Standard Deviations
 BollingerBandsChart.label=Bollinger Bands
 BollingerBandsChart.periods=Selected Periods
-BollingerBandsChart.deviations=Standard Deviations
-RSIChart.label=RSI
-RSIChart.periods=Selected Periods
-StochasticChart.label=Stochastic
-StochasticChart.periods=Selected Periods
-StochasticChart.averagePeriods=Moving Average Periods
-TrendChart.label=Trend
-TrendChart.periods=Selected Periods
-TrendChart.deviations=Standard deviations
-VolumeChart.label=Volume
-ChartParametersDialog.title=Parameters 
-ChartParametersDialog.description=Parameters definition
-ChartParametersDialog.name=Name
-ChartParametersDialog.color=Color
-ChartParametersDialog.insertIndicator=Insert indicator
-ChartParametersDialog.selectedZone=On the selected zone
-ChartParametersDialog.newZone=On a new zone
-ChartParametersDialog.message=Set parameters for 
-ColorsPreferencePage.textColor=Text Color
-ColorsPreferencePage.evenRowBackground=Even Row Background
-ColorsPreferencePage.oddRowBackground=Odd Row Background
-ColorsPreferencePage.positiveValueColor=Positive Value Color
-ColorsPreferencePage.negativeValueColor=Negative Value Color
-ColorsPreferencePage.totalBackground=Total Row Background
-GeneralPreferencePage.columns=Columns
-GeneralPreferencePage.availableColumns=Available columns
-GeneralPreferencePage.add=->
-GeneralPreferencePage.remove=<-
-GeneralPreferencePage.up=Up
-GeneralPreferencePage.down=Down
-GeneralPreferencePage.displayColumns=Display columns
-Book.time=Time:
-Book.volume=Vol:
-Book.last=Last:
-Book.high=High:
-Book.change=Chng:
-Book.low=Low:
+BollingerBandsChart.smoothingType=Moving Average Type
+Book.ask=Ask
+Book.askNumber=\#
+Book.askQuantity=Q.ty
+Book.bid=Bid
 Book.bidNumber=\#
 Book.bidQuantity=Q.ty
-Book.bid=Bid
-Book.ask=Ask
-Book.askQuantity=Q.ty
-Book.askNumber=\#
+Book.change=Chng:
+Book.high=High:
+Book.last=Last:
+Book.low=Low:
+Book.time=Time:
 Book.title=\ - Level II
-BookPreferencePage.groupPrices=Group Prices
-BookPreferencePage.textColor=Text Color
-BookPreferencePage.rowBackground=Row Background
-BookPreferencePage.hilightPriceVariations=Hilight Price Variations
-BookPreferencePage.positiveValueColor=Positive Value Color
-BookPreferencePage.negativeValueColor=Negative Value Color
+Book.volume=Vol:
 BookPreferencePage.colorizePriceLevels=Colorize Price Levels
+BookPreferencePage.groupPrices=Group Prices
+BookPreferencePage.hilightPriceVariations=Hilight Price Variations
 BookPreferencePage.level1=Price Level 1 Color
 BookPreferencePage.level2=Price Level 2 Color
 BookPreferencePage.level3=Price Level 3 Color
 BookPreferencePage.level4=Price Level 4 Color
 BookPreferencePage.level5=Price Level 5 Color
-IndicesPreferencePage.textForeground=Text Color
-IndicesPreferencePage.background=Background
-IndicesPreferencePage.availableIndices=Available indices:
-IndicesPreferencePage.positiveValueColor=Positive Value Color
-IndicesPreferencePage.negativeValueColor=Negative Value Color
-IndicesPreferencePage.makeBoxEqual=Make boxes equally sized
+BookPreferencePage.negativeValueColor=Negative Value Color
+BookPreferencePage.positiveValueColor=Positive Value Color
+BookPreferencePage.rowBackground=Row Background
+BookPreferencePage.textColor=Text Color
+ChartParametersDialog.aboveSelectedZone=Above the selected zone
+ChartParametersDialog.belowSelectedZone=Below the selected zone
+ChartParametersDialog.color=Color
+ChartParametersDialog.description=Parameters definition
+ChartParametersDialog.insertIndicator=Insert indicator
+ChartParametersDialog.message=Set parameters for
+ChartParametersDialog.name=Name
+ChartParametersDialog.selectedZone=On the selected zone
+ChartParametersDialog.title=Parameters
+ChartView.Change=Chg.:
+ChartView.ConfirmDeleteMessage=Do you really want to delete the selected chart ?
+ChartView.ConfirmDeleteTitle=Confirm Delete
 ChartView.Date=Date:
-ChartView.Time=Time:
-ChartView.Value=Val.:
 ChartView.Max=Max.:
 ChartView.Min=Min.:
-ChartView.Change=Chg.:
+ChartView.Time=Time:
+ChartView.Value=Val.:
 ChartView.Volume=Vol.:
-ChartView.ConfirmDeleteTitle=Confirm Delete
-ChartView.ConfirmDeleteMessage=Do you really want to delete the selected chart ?
+ColorsPreferencePage.evenRowBackground=Even Row Background
+ColorsPreferencePage.negativeValueColor=Negative Value Color
+ColorsPreferencePage.oddRowBackground=Odd Row Background
+ColorsPreferencePage.positiveValueColor=Positive Value Color
+ColorsPreferencePage.textColor=Text Color
+ColorsPreferencePage.totalBackground=Total Row Background
+CommodityChannelIndex.label=Commodity Channel Index
+CommodityChannelIndex.period=Period
+CommodityChannelIndex.smoothingPeriod=Smoothing Period
+CommodityChannelIndex.smoothingType=Smoothing Average Type
+DetrendedPriceOscillator.label=Detrended Price Oscillator
+DetrendedPriceOscillator.period=Period
+DetrendedPriceOscillator.smoothingPeriod=Smoothing Average Type
+DirectionalMovementIndex.label=Directional Movement Index
+DirectionalMovementIndex.negativeColor=Negative Line Color
+DirectionalMovementIndex.period=Period
+DirectionalMovementIndex.positiveColor=Positive Line Color
+DirectionalMovementIndex.smoothingPeriod=Smoothing Period
+DirectionalMovementIndex.smoothingType=Smoothing Average Type
+GeneralPreferencePage.add=->
+GeneralPreferencePage.availableColumns=Available columns
+GeneralPreferencePage.columns=Columns
+GeneralPreferencePage.displayColumns=Display columns
+GeneralPreferencePage.down=Down
+GeneralPreferencePage.remove=<-
+GeneralPreferencePage.up=Up
+HistoryChartView.title=Historical Chart
+HistoryChartView.updateChart=Update Chart
+IndicesPreferencePage.availableIndices=Available indices:
+IndicesPreferencePage.background=Background
+IndicesPreferencePage.makeBoxEqual=Make boxes equally sized
+IndicesPreferencePage.negativeValueColor=Negative Value Color
+IndicesPreferencePage.positiveValueColor=Positive Value Color
+IndicesPreferencePage.textForeground=Text Color
+NewIndicatorWizard.title=Aggiunta Indicatore
+NewsView.1=Date
+NewsView.2=Title
+NewsView.3=Source
+NewsView.4=Update News
+OscillatorPage.description=Create a new indicator chart
+OscillatorPage.title=Select an indicator
+ParametersPage.description=Set the parameters for the indicator
+ParametersPage.title=Indicator parameters
+PortfolioDialog.10=Portfolio Data
+PortfolioDialog.11=Owned Quantity
+PortfolioDialog.12=Paid Price
+PortfolioDialog.13=Stock Watch Item
+PortfolioDialog.14=Please enter the data related to the stock item you want to watch
+PortfolioDialog.4=Stock Watch
+PortfolioDialog.5=Fundamental Data
+PortfolioDialog.8=Description
+PortfolioDialog.9=Minimum Quantity
+PortfolioDialog.Symbol=Symbol
+PortfolioDialog.Ticker=Ticker
+PortfolioView.Ask=Ask
+PortfolioView.AskQty=Ask Q.ty
+PortfolioView.Bid=Bid
+PortfolioView.BidQty=Bid Q.ty
+PortfolioView.Close=Close
+PortfolioView.Code=Code
+PortfolioView.ConfirmDeleteMessage=Do you really want to delete the selected item ?
+PortfolioView.ConfirmDeleteTitle=Confirm Delete
+PortfolioView.Description=Description
+PortfolioView.Gain=Gain
+PortfolioView.Maximum=Max.
+PortfolioView.MinQty=Min. Qty
+PortfolioView.Minimum=Min.
+PortfolioView.Open=Open
+PortfolioView.OwnedQty=Own. Q.ty
+PortfolioView.OwnedValue=Own. Value
+PortfolioView.PaidPrice=Paid
+PortfolioView.Price=Price
+PortfolioView.Ticker=Ticker
+PortfolioView.Time=Time
+PortfolioView.Total=TOTAL
+PortfolioView.Value=Value
+PortfolioView.Variance=Chg.%
+PortfolioView.Volume=Volume
+RSIChart.label=RSI
+RSIChart.periods=Selected Periods
+RSIChart.smoothingPeriod=Smoothing Period
+RSIChart.smoothingType=Smoothing Average Type
+RealtimeChartView.title=Intraday
+StochasticChart.averagePeriods=Moving Average Periods
+StochasticChart.buySignal=Buy Signal Threshold
+StochasticChart.dSmoothingPeriod=%D Smoothing Period
+StochasticChart.kSmoothingPeriod=%K Smoothing Period
+StochasticChart.label=Stochastic
+StochasticChart.periods=Selected Periods
+StochasticChart.sellSignal=Sell Signal Threshold
+StochasticChart.smoothingType=Smoothing Average Type
+TrendChart.deviations=Standard deviations
+TrendChart.label=Trend
+TrendChart.periods=Selected Periods
+VolumeChart.label=Volume
+ZonePage.description=Select the zone where the indicator should be placed
+ZonePage.title=Indicator zone
