Added new indicators
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@254 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -42,3 +42,7 @@ AverageChart.label=Media Mobile
 RSIChart.label=R.S.I.
 StochasticChart.label=Oscillatore Stocastico
 TrendChart.label=Andamento
+DirectionalMovementIndex.label=Directional Movement Index
+AverageTrueRange.label=Average True Range
+CommodityChannelIndex.label=Commodity Channel Index
+DetrendedPriceOscillator.label=Detrended Price Oscillator
